added latest change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>"Welcome to team B's visual journey throughout the 1st project"</h1>
         
         <div>
+        <br>
+        <img class="fourth" src="/assets/c23960dc-cb9b-4fd1-840d-29acae8834e7.jpg"/>
+        <p> Hello, we are TEAM B, nice to meet you!</p>
+        <br>
         <img class="first" src="/assets/thumb-dasdasd.jpg"/>
         <p> This is our very first team meeting. We discussed about the concept of our project and we make the wireframe.</p>
         <br>
@@ -19,7 +23,7 @@
         <p>We tirelessly worked day and night. Even during our break, we still talk about what can we improved in our project.</p>
         <br>
         <img class="third" src="/assets/thumb-IMG_8287.jpg"/>
-        <p> This is an updated picture</p>
+        <p> As you can see on this picture, our team is very consistent, even to the sitting position and body language.</p>
         <br>
         <br>
         <br>
@@ -30,9 +34,12 @@
             <span style="color: red;">(505) 503-4455</span> NOW!!!! <span style="color: blue;">(<span style="color:blueviolet;">50%</span> Discount for the first order!)</span>
         <br>
         <br>   
-            Do you Git problem? Push Pull Merge give you migrane? Just call <span style="color: red;">(505) 503-4455</span> NOW and we will fix it for you!!!!
+            Do you Git any problem? Push Pull Merge give you migrane? Just call <span style="color: red;">(505) 503-4455</span> NOW and we will fix it for you!!!!
             <br><br><span style="color:blueviolet;">We're here for you 24/7, 365days a year, ANYTIME, ANYWHERE</span> Just call <span style="color: red;">(505) 503-4455</span> NOW!!!
         </p>
+        <br>
+        <p> ...Without further ado, here is our project ..3..2...1....(drum roll*)</p>
+        <br>
          </div>
     </main>
     
