--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         
         <div>
         <br>
-        <img class="fourth" src="/assets/c23960dc-cb9b-4fd1-840d-29acae8834e7.jpg"/>
+        <img class="fourth" src="assets/c23960dc-cb9b-4fd1-840d-29acae8834e7.jpg"/>
         <p> Hello, we are TEAM B, nice to meet you!</p>
         <br>
-        <img class="first" src="/assets/thumb-dasdasd.jpg"/>
+        <img class="first" src="assets/thumb-dasdasd.jpg"/>
         <p> This is our very first team meeting. We discussed about the concept of our project and we make the wireframe.</p>
         <br>
-        <img class="second" src="/assets/thumb-IMG_8262.jpg"/>
+        <img class="second" src="assets/thumb-IMG_8262.jpg"/>
         <p>We tirelessly worked day and night. Even during our break, we still talk about what can we improved in our project.</p>
         <br>
-        <img class="third" src="/assets/thumb-IMG_8287.jpg"/>
+        <img class="third" src="assets/thumb-IMG_8287.jpg"/>
         <p> As you can see on this picture, our team is very consistent, even to the sitting position and body language.</p>
         <br>
         <br>
